try01 fix dark mode

--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1,11 +1,6 @@
-
-
 .dark .header-container {
-    position: sticky;
-    top: 0px;
-    background-color: hsl(0, 0%, 20%);
+    background-color: #37373e;
     color: white;
-    z-index: 100;
 }
 .dark header{
     background-color: transparent;
